New Update index.html

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-GB">
 <head>
   <meta charset="UTF-8">
-  <title>Intermediate British English Quiz</title>
+  <title>Quiz for Magda</title>
   <style>
     body {
       font-family: Arial, sans-serif;
