--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 </head>
 <body>
 
-  <h1>Intermediate British English Quiz</h1>
+  <h1>Quiz for Magda</h1>
   <div id="quiz">
     <!-- Question 1 -->
     <div class="question" id="q1-wrap">
